--- a/style.css
+++ b/style.css
@@ -36,8 +36,13 @@ body {
 /* #region comertial */
 .content {
   margin-top: 30px;
-  @media (max-width: 600px) {
+  @media (max-width: 1120px) {
     margin-top: 0;
+  }
+}
+.container {
+  @media (max-width: 1120px) {
+    padding: 0;
   }
 }
 .content__inner {
@@ -67,6 +72,14 @@ body {
   font-weight: 600;
   line-height: 30px;
   color: #fff;
+  @media (max-width: 1120px) {
+    padding: 0 10px;
+  }
+  @media (max-width: 500px) {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 21px;
+  }
 }
 .comertial-traning {
   background: url("./images/alex.png") right bottom no-repeat,
@@ -185,6 +198,13 @@ body {
   @media (max-width: 1120px) {
     max-width: 700px;
     justify-content: center;
+  }
+  @media (max-width: 1120px) {
+    align-self: center;
+    width: 600px;
+  }
+  @media (max-width: 600px) {
+    width: 100%;
   }
 }
 .form {
@@ -458,17 +478,26 @@ body {
     flex-direction: column;
     gap: 40px;
   }
+  @media (max-width: 500px) {
+    padding: 40px 0;
+  }
 }
 .footer__contacts {
-  display: flex;
-  gap: 65px;
-  @media (max-width: 530px) {
+  display: grid;
+  grid-template-columns: 200px 250px;
+  column-gap: 40px;
+  row-gap: 40px;
+  padding: 0 10px;
+  @media (max-width: 1050px) {
+    justify-content: center;
+  }
+  @media (max-width: 500px) {
     justify-content: space-between;
-    gap: 0;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 17.07px;
+    max-width: fit-content;
+    column-gap: 0;
+  }
+  @media (max-width: 370px) {
+    grid-template-columns: 150px 150px;
   }
 }
 .footer-box__ukraine {
@@ -476,22 +505,24 @@ body {
   flex-direction: column;
   gap: 45px;
 }
+.footer-box__ukraine div {
+  @media (max-width: 360px) {
+    max-width: 150px;
+  }
+}
 .footer-phone__text {
   color: #a3a3a3;
   font-size: 14px;
   font-weight: 500;
   line-height: 17.07px;
+  max-width: fit-content;
 }
-.footer-box__phone {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 24.38px;
-  color: #fff;
-}
+
 .footer-box__europe {
   display: flex;
   flex-direction: column;
   gap: 53px;
+  max-width: fit-content;
 }
 .footer-box__ukraine div,
 .footer-box__europe div {
@@ -500,22 +531,25 @@ body {
   gap: 8px;
 }
 .footer-box__ukraine a {
-  @media (max-width: 470px) {
-    font-size: 10px;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 17.07px;
+  color: #fff;
+  @media (max-width: 530px) {
+    font-size: 14px;
     font-weight: 400;
     line-height: 12.19px;
   }
 }
 .footer-box__europe a {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-  color: #fff;
+  font-family: Montserrat;
   font-size: 20px;
-  font-weight: 400;
-  line-height: 24.38px;
-  @media (max-width: 470px) {
-    font-size: 10px;
+  font-weight: 500;
+  line-height: 17.07px;
+  color: #fff;
+  @media (max-width: 530px) {
+    font-size: 14px;
     font-weight: 400;
     line-height: 12.19px;
   }
@@ -525,7 +559,7 @@ body {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  padding: 10px 0;
+  padding: 11px 40px;
   color: #fff;
   font-family: Montserrat;
   font-size: 14px;
@@ -533,8 +567,16 @@ body {
   line-height: 17.07px;
   border: 1px solid #fff;
   transition: all 0.3s ease 0s;
+  @media (max-width: 1050px) {
+    order: 2;
+  }
   @media (max-width: 470px) {
     padding: 10px 20px;
+    align-self: self-start;
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 14.63px;
+    text-align: center;
   }
 }
 .telegram:hover {
@@ -548,7 +590,7 @@ body {
   flex-direction: column;
   gap: 20px;
   text-align: right;
-  @media (max-width: 540px) {
+  @media (max-width: 1050px) {
     font-size: 10px;
     font-weight: 400;
     line-height: 12.19px;
@@ -563,5 +605,37 @@ body {
   font-size: 20px;
   font-weight: 400;
   line-height: 24.38px;
+  @media (max-width: 600px) {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12.19px;
+    text-align: center;
+  }
+}
+.footer-social {
+  display: flex;
+  gap: 50px;
+  @media (max-width: 500px) {
+    justify-content: space-between;
+  }
+  @media (max-width: 370px) {
+    gap: 10px;
+  }
+}
+.gmail {
+  color: #fff;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17.07px;
+  text-align: center;
+  @media (max-width: 500px) {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12.19px;
+  }
 }
 /* #endregion */
